--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,106 @@ Paleta de cores
 Verde: #49a09d
 Roxo: #5f2c82
 */
+
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  background-color: #5f2c82;
+  max-width: 768px;
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  background-color: #5f2c82;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+div#imagem {
+  display: block;
+  background: url("../imagens/pexels-alexander-grey-1149019.jpg") no-repeat;
+  background-size: cover;
+  height: 200px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+section#login {
+  position: absolute;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 515px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+p {
+  display: block;
+  font-size: 0.8em;
+  padding: 0px 10px 0px 10px;
+}
+
+span.material-symbols-outlined {
+  font-size: 2em;
+  color: white;
+  width: 40px;
+  padding-top: 13px;
+  transform: translateY(-20px);
+}
+
+div#campo {
+  display: block;
+  padding: 10px;
+  background-color: #5f2c82;
+  border-radius: 10px;
+  margin: 5px 10px;
+  height: 40px;
+  width: 92%;
+  border: 2px solid #5f2c82;
+}
+
+input {
+  background-color: #94dad7;
+  padding-left: 10px;
+  font-size: 1em;
+  height: 35px;
+  border: 0px;
+  border-radius: 10px;
+  width: calc(100% - 45px);
+  transform: translateY(-30px);
+}
+
+input#submit {
+  display: block;
+  background-color: #678d8c;
+  color: white;
+  height: 40px;
+  width: 92%;
+  margin: 36px 10px 5px 10px;
+}
+
+input#esqsenha {
+  display: block;
+  background-color: white;
+  color: #678d8c;
+  border: 2px solid #678d8c;
+  width: 92%;
+  height: 40px;
+  margin: 0px 10px 10px 10px;
+}
