--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,21 +1,27 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+  main {
+    background-image: linear-gradient(to top, #49a09d, #5f2c82);
+  }
+
   section#login {
     width: 80vw;
-    height: 40vh;
+    height: 42vh;
   }
 
   div#imagem {
     float: left;
     width: 24vw;
     height: 50vh;
+    border-radius: 0px;
   }
 
   p {
     float: right;
     margin: 0px;
     width: 56vw;
+    padding-bottom: 5px;
   }
 
   div#campo {
@@ -31,7 +37,7 @@
   input#submit {
     float: right;
     width: 54vw;
-    margin-top: 30px;
+    margin-top: 37px;
     margin-right: 10px;
     margin-left: 0px;
   }
@@ -41,5 +47,57 @@
     width: 54vw;
     margin-right: 10px;
     margin-left: 0px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  main {
+    background-image: linear-gradient(to bottom, #49a09d, #5f2c82);
+  }
+  section#login {
+    width: 950px;
+    height: 50vh;
+  }
+
+  div#imagem {
+    float: right;
+    width: 480px;
+    height: 50vh;
+    border-radius: 0px;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  p {
+    float: left;
+    font-size: 1em;
+    margin: 0px;
+    width: 431px;
+    padding: 12px 0px 23px 10px;
+  }
+
+  div#campo {
+    float: left;
+    width: 452px;
+    margin-top: 0px;
+    margin-left: 8px;
+  }
+
+  input {
+    padding: 10px;
+    margin: 0px;
+  }
+  input#submit {
+    float: left;
+    width: 452px;
+  }
+
+  input#esqsenha {
+    float: left;
+    width: 452px;
+    margin-right: 10px;
+    margin-left: 8px;
   }
 }
