--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 main {
-  background-color: #5f2c82;
+  background-image: linear-gradient(to left, #49a09d, #5f2c82);
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -48,6 +48,8 @@ section#login {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.855);
+  transition: width 0.3s, height 0.3s;
+  transition-timing-function: ease;
 }
 
 h1 {
