--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,14 +42,13 @@ section#login {
   background-color: white;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 250px;
   height: 515px;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.855);
-  transition: width 0.3s, height 0.3s;
-  transition-timing-function: ease;
+  transform: translate(-50%, -50%);
+  transition: width 0.6s, height 0.6s;
 }
 
 h1 {
@@ -68,8 +67,8 @@ span.material-symbols-outlined {
   color: white;
   width: 40px;
   padding-top: 13px;
-  transform: translateY(-23px);
   padding-left: 5px;
+  transform: translateY(-23px);
 }
 
 div#campo {
@@ -94,6 +93,10 @@ input {
   transform: translateY(-30px);
 }
 
+input:hover {
+  background-color: white;
+}
+
 input#submit {
   display: block;
   background-color: #4c919a;
@@ -106,8 +109,9 @@ input#submit {
 }
 
 input#submit:hover {
-  background-color: #4c919a;
+  background-color: #94cfcd;
   cursor: pointer;
+  border: 1px solid #678d8c;
 }
 
 input#esqsenha {
@@ -120,4 +124,10 @@ input#esqsenha {
   margin: 0px 10px 10px 10px;
   padding-bottom: 5px;
   border-radius: 20px;
+}
+
+input#esqsenha:hover {
+  color: white;
+  background-color: #94cfcd;
+  cursor: pointer;
 }
